--- a/UserJourneyAPI/UserJourney.API/appsettings.Development.json
+++ b/UserJourneyAPI/UserJourney.API/appsettings.Development.json
@@ -1,30 +1,9 @@
 {
-  "ConnectionStrings": {
-    "UserJourneyDB": "server=PCLPT147\\SQL2019;Database=UserJourney;User Id=sa;Password=Tatva@123;Trusted_connection=False;Encrypt=False;TrustServerCertificate=True"
-  },
-  "EMailSettings": {
-    "From": "viren.kabariya@tatvasoft.com",
-    "Host": "172.16.10.7",
-    "Port": "25",
-    "UserName": "",
-    "Password": "",
-    "SSLEnabled": "false",
-    "BypassAuthentication": "true",
-    "EmailTemplatePath": "D:/Projects/UserJourneyAPIRepo/UserJourneyAPI/UserJourney.API/EmailTemplate"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
-  },
-  "AllowedHosts": "*",
-  "JwtConfig": {
-    "Issuer": "UserJourneyJwtIssuer",
-    "Audience": "UserJourneyJwtAudience",
-    "Subject": "UserJourneyJWTSubject",
-    "Secret": "PdjiRfCssWB53A9veeRy6aPa7ivS5bWgYGpCbgw6VZFkg5mCFtagScMyN",
-    "ExpirationMinutes": 90,
-    "Type": "Bearer"
   }
 }
